--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 
-    "name": "Pro Auto Filter Bot V2",
+    "name": "Auto-Filter-Bot-V2-HyetelegramBots",
 
     "description": "A Filter Bot Which Doesnt Need Manuall Filter Adding",
 
